Add Smashwords affiliate links

--- a/affilpy/tests/add_tests.yaml
+++ b/affilpy/tests/add_tests.yaml
@@ -3,3 +3,8 @@ name: Amazon
 url: http://www.amazon.com/dp/B004QGYPYQ/
 id: some_affil_id
 expected: http://www.amazon.com/dp/B004QGYPYQ/?tag=some_affil_id
+---
+name: Smashwords
+url: http://www.smashwords.com/books/view/305
+id: some_affil_id
+expected: http://www.smashwords.com/books/view/305?ref=some_affil_id
